added you in html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Developer Portfolio</title>
     <meta name="description" content="Portfolio of a Creative Technologist">
 
-    <!-- Google Fonts -->
+    <!-- Google Fonts you -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
