--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <header>
             <div class="glass-panel hero-glass">
                 <div class="code-badge">
-                    <span class="comment">// Welcome to my universe...</span>
+                    <span class="comment">// Welcome to my universe</span>
                 </div>
                 <h1 class="glitch-text" data-text="ABIJITH A R">ABIJITH A R</h1>
                 <p class="hero-sub">Vibe Coder building digital experiences at the intersection of <br>art, technology,
