--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
         <header>
             <div class="glass-panel hero-glass">
                 <div class="code-badge">
-                    <span class="comment">// Welcome to my universe</span>
+                    <span class="comment">// SYSTEM OPTIMIZED</span>
                 </div>
-                <h1 class="glitch-text" data-text="ABIJITH A R">ABIJITH A R</h1>
-                <p class="hero-sub">Vibe Coder building digital experiences at the intersection of <br>art, technology,
-                    and
-                    design.</p>
+                <h1 class="hero-title">ORBITAL SYSTEMS</h1>
+                <p class="hero-sub">Delivering enterprise-grade digital solutions at planetary scale.<br>Bridging the
+                    gap between complex logic and seamless user experience.</p>
             </div>
             <div class="scroll-indicator">
                 <span>SCROLL TO EXPLORE</span>
@@ -66,27 +65,27 @@
 
         <section id="about" class="grid-section">
             <div class="section-header">
-                <span class="mono-label">01. ABOUT</span>
-                <h2>The Architect</h2>
+                <span class="mono-label">01. PROFILE</span>
+                <h2>WHO WE ARE</h2>
             </div>
             <div class="content-block glass-panel">
-                <p class="mono-text typing-effect">> Initializing user profile...</p>
-                <p>I am a Vibe Coder passionate about crafting immersive digital experiences. I don't just write code; I
-                    weave aesthetics and logic to create vibes that resonate. Always exploring the bleeding edge of web
-                    interaction.</p>
+                <p class="mono-text typing-effect">> Loading corporate module...</p>
+                <p>We are a premier digital consultancy focused on scalability, performance, and engineered aesthetics.
+                    We don't just write code; we architect resilient systems that power the next generation of the web.
+                    Precision is our standard.</p>
 
                 <div class="stats-grid">
                     <div class="stat-item">
-                        <span class="number">01</span>
-                        <span class="label">Year Exp</span>
+                        <span class="number">10+</span>
+                        <span class="label">Years Presence</span>
                     </div>
                     <div class="stat-item">
-                        <span class="number">02</span>
-                        <span class="label">Projects</span>
+                        <span class="number">50+</span>
+                        <span class="label">Clients Served</span>
                     </div>
                     <div class="stat-item">
-                        <span class="number">100%</span>
-                        <span class="label">Commitment</span>
+                        <span class="number">99.9%</span>
+                        <span class="label">Uptime Guara.</span>
                     </div>
                 </div>
             </div>
@@ -94,15 +93,15 @@
 
         <section id="work" class="grid-section">
             <div class="section-header">
-                <span class="mono-label">02. WORK</span>
-                <h2>Selected Repositories</h2>
+                <span class="mono-label">02. DEPLOYMENTS</span>
+                <h2>CASE STUDIES</h2>
             </div>
             <div class="projects-grid">
                 <article class="project-card">
                     <div class="card-content">
-                        <span class="project-type">WEB APP</span>
+                        <span class="project-type">FINTECH</span>
                         <h3>Neural Interface</h3>
-                        <p>A data visualization dashboard using D3.js and React.</p>
+                        <p>Real-time high-frequency trading dashboard for institutional clients.</p>
                         <ul class="tech-stack">
                             <li>React</li>
                             <li>D3.js</li>
@@ -112,9 +111,9 @@
                 </article>
                 <article class="project-card">
                     <div class="card-content">
-                        <span class="project-type">3D EXPERIENCE</span>
+                        <span class="project-type">IMMERSIVE WEB</span>
                         <h3>Void Walker</h3>
-                        <p>Interactive WebGL game designed for browser performance.</p>
+                        <p>Award-winning WebGL visualizer for a global automotive brand.</p>
                         <ul class="tech-stack">
                             <li>Three.js</li>
                             <li>WebGL</li>
@@ -126,10 +125,10 @@
                     <div class="card-content">
                         <span class="project-type">ECOMMERCE</span>
                         <h3>Future Store</h3>
-                        <p>Headless Shopify build with Next.js frontend.</p>
+                        <p>Headless architecture scaling to 1m+ daily active users.</p>
                         <ul class="tech-stack">
                             <li>Next.js</li>
-                            <li>Shopify</li>
+                            <li>Shopify Plus</li>
                             <li>Tailwind</li>
                         </ul>
                     </div>
@@ -140,12 +139,12 @@
         <section id="contact" class="grid-section">
             <div class="section-header">
                 <span class="mono-label">03. CONNECT</span>
-                <h2>Initialize Uplink</h2>
+                <h2>CONTACT US</h2>
             </div>
             <div class="contact-wrapper glass-panel">
-                <p>Have a visionary project? Let's compile our ideas.</p>
-                <a href="mailto:abijithar.i8@gmail.com" class="btn-glitch">
-                    <span class="text">SEND_TRANSMISSION</span>
+                <p>Ready to elevate your digital infrastructure? Let's discuss your requirements.</p>
+                <a href="mailto:contact@orbitalsystems.com" class="btn-glitch">
+                    <span class="text">GET IN TOUCH</span>
                     <span class="decoration"></span>
                 </a>
             </div>
@@ -153,8 +152,8 @@
 
         <footer>
             <div class="footer-content">
-                <span class="mono-label">SYSTEM STATUS: ONLINE</span>
-                <p>&copy; 2024. Engineered with Three.js & GSAP.</p>
+                <span class="mono-label">SYSTEM STATUS: NOMINAL</span>
+                <p>&copy; 2024 Orbital Systems Inc. Engineered with Three.js & GSAP.</p>
             </div>
         </footer>
     </main>
